dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=metaworldcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=metaworldcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=metaworldcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=metaworldcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=metaworldcoin-wallet.1
endif
endif
